force-app/main/default/objects/InboundDocument__c/InboundDocument__c.object-meta.xml
<CustomObject>
    <label>Inbound Document - ישן</label>
    <nameField>
        <displayFormat>DOC-{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inbound Documents - ישן</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>