force-app/main/default/objects/InboundDocument__c/fields/account__c.field-meta.xml
<CustomField>
    <fullName>account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Inbound_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>