force-app/main/default/objects/InboundDocument__c/fields/Attachments__c.field-meta.xml
<CustomField>
    <fullName>Attachments__c</fullName>
    <label>Attachments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>