force-app/main/default/objects/InboundDocument__c/fields/BRZ_USER__c.field-meta.xml
<CustomField>
    <fullName>BRZ_USER__c</fullName>
    <formula>Owner:User.BRZ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Describe BarZivRavid Users</inlineHelpText>
    <label>BRZ USER</label>
    <type>Checkbox</type>
</CustomField>