force-app/main/default/objects/InboundDocument__c/fields/BZR__c.field-meta.xml
<CustomField>
    <fullName>BZR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BZR</label>
    <type>Checkbox</type>
</CustomField>