force-app/main/default/objects/InboundDocument__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Claims</fullName>
                <default>true</default>
                <label>Claims</label>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>