force-app/main/default/objects/InboundDocument__c/fields/Email_Preview__c.field-meta.xml
<CustomField>
    <fullName>Email_Preview__c</fullName>
    <label>Preview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>