force-app/main/default/objects/InboundDocument__c/fields/EntId10__c.field-meta.xml
<CustomField>
    <fullName>EntId10__c</fullName>
    <label>EntId10</label>
    <length>18</length>
    <type>Text</type>
</CustomField>