force-app/main/default/objects/InboundDocument__c/fields/EntId11__c.field-meta.xml
<CustomField>
    <fullName>EntId11__c</fullName>
    <label>EntId11</label>
    <length>18</length>
    <type>Text</type>
</CustomField>