force-app/main/default/objects/InboundDocument__c/fields/EntId12__c.field-meta.xml
<CustomField>
    <fullName>EntId12__c</fullName>
    <label>EntId12</label>
    <length>18</length>
    <type>Text</type>
</CustomField>