force-app/main/default/objects/InboundDocument__c/fields/Index_Date__c.field-meta.xml
<CustomField>
    <fullName>Index_Date__c</fullName>
    <externalId>true</externalId>
    <label>Index Date</label>
    <length>80</length>
    <type>Text</type>
</CustomField>