force-app/main/default/objects/InboundDocument__c/fields/Is_active_user__c.field-meta.xml
<CustomField>
    <fullName>Is_active_user__c</fullName>
    <formula>Owner:User.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is active user</label>
    <type>Checkbox</type>
</CustomField>