force-app/main/default/objects/InboundDocument__c/fields/Physical_Path__c.field-meta.xml
<CustomField>
    <fullName>Physical_Path__c</fullName>
    <label>Physical Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>