force-app/main/default/objects/InboundDocument__c/fields/SubjectNotInPath__c.field-meta.xml
<CustomField>
    <fullName>SubjectNotInPath__c</fullName>
    <formula>IF( OR(CONTAINS(Physical_Path__c, TRIM(LEFT(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Subject__c, &quot;\\&quot;, &quot;&quot;),&quot;/&quot;,&quot;&quot;),&quot;:&quot;,&quot;&quot;),&quot;*&quot;,&quot;&quot;),&quot;?&quot;,&quot;&quot;),&quot;\&quot;&quot;,&quot;&quot;),&quot;&lt;&quot;,&quot;&quot;),&quot;&gt;&quot;,&quot;&quot;),&quot;|&quot;,&quot;&quot;),&quot;	&quot;,&quot; &quot;),&quot;\r\n&quot;,&quot; &quot;),&quot;\n&quot;,&quot; &quot;),123))),ISNULL(Sender__c),Sender__c=&quot;&quot;, CONTAINS(Subject__c,&quot;תיוק שגוי&quot;))
 ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SubjectNotInPath</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>