force-app/main/default/objects/InboundDocument__c/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <formula>IF(SUBSTITUTE(&quot;ss	DD&quot;,&quot;	&quot;,&quot; &quot;)=&quot;ss DD&quot;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>