force-app/main/default/objects/InboundDocument__c/fields/TO__c.field-meta.xml
<CustomField>
    <fullName>TO__c</fullName>
    <label>TO</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>