force-app/main/default/objects/InboundDocument__c/fields/To_Delete__c.field-meta.xml
<CustomField>
    <fullName>To_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mark if you want a Manager to Delete this Document</inlineHelpText>
    <label>To Delete</label>
    <type>Checkbox</type>
</CustomField>