force-app/main/default/objects/InboundDocument__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>אישור כיסוי</fullName>
            </value>
            <value>
                <fullName>אישור כיסוי ללקוח</fullName>
            </value>
            <value>
                <fullName>אישור מס</fullName>
            </value>
            <value>
                <fullName>אישור פקס</fullName>
            </value>
            <value>
                <fullName>אישור קיום ביטוחים</fullName>
            </value>
            <value>
                <fullName>ביטול פוליסה</fullName>
            </value>
            <value>
                <fullName>בקשה לאישור קיום ביטוח</fullName>
            </value>
            <value>
                <fullName>ד. תשלום DEBIT NOTE</fullName>
            </value>
            <value>
                <fullName>דף סיכום פגישה</fullName>
            </value>
            <value>
                <fullName>דרישת תשלום</fullName>
            </value>
            <value>
                <fullName>הארכת פוליסה</fullName>
            </value>
            <value>
                <fullName>הנפקה ( פרטית / ציבורית)</fullName>
            </value>
            <value>
                <fullName>הסבה</fullName>
            </value>
            <value>
                <fullName>הסכם סודיות - NDA</fullName>
            </value>
            <value>
                <fullName>הצהרת העדר תביעות NCD</fullName>
            </value>
            <value>
                <fullName>הצעה (לקוח חדש)</fullName>
            </value>
            <value>
                <fullName>הצעה לחידוש</fullName>
            </value>
            <value>
                <fullName>הצעה מן המבטח</fullName>
            </value>
            <value>
                <fullName>חומר חדש מהלקוח</fullName>
            </value>
            <value>
                <fullName>חומר לחידוש מהלקוח</fullName>
            </value>
            <value>
                <fullName>חריג חדלות פרעון</fullName>
            </value>
            <value>
                <fullName>טבלת בעלי מניות</fullName>
            </value>
            <value>
                <fullName>טופס הצעה</fullName>
            </value>
            <value>
                <fullName>כולם</fullName>
            </value>
            <value>
                <fullName>כפיפויות</fullName>
            </value>
            <value>
                <fullName>כתבה על החברה</fullName>
            </value>
            <value>
                <fullName>כתב כיסוי</fullName>
            </value>
            <value>
                <fullName>כתב מינוי סוכן</fullName>
            </value>
            <value>
                <fullName>לחברת ביטוח Submission</fullName>
            </value>
            <value>
                <fullName>מייל ללקוח לאחר פגישה</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>